<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Sure"
    android:background="#0384e6"  >
    
            <Button
            android:id="@+id/buttonYes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_below="@+id/Are_Sure"
            android:layout_centerHorizontal="false"
            android:layout_centerVertical="true"
            android:text="@string/Yes"
            android:background="@drawable/ok" />
            
                    <Button
                        android:id="@+id/buttonNo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignBottom="@+id/buttonYes"
                        android:layout_alignParentRight="true"
                        android:layout_below="@+id/Are_Sure"
                        android:layout_marginTop="50dp"
                        android:background="@drawable/no"
                        android:text="@string/No" />

    <TextView
        android:id="@+id/Are_Sure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_world4" />

</RelativeLayout>
